IMAGE SIZED CORRECTLY ON MOBILE

--- a/assets/css/carousel.css
+++ b/assets/css/carousel.css
@@ -6,16 +6,31 @@ body {
   padding-bottom: 40px;
 }
 
+html, body {
+  width: 100%;
+}
+
+.copyright {
+  margin-left: 10px;
+}
+
 /* CUSTOMIZE THE CAROUSEL
 -------------------------------------------------- */
 
 /* Carousel base class */
 .carousel {
-  left: 25%;
-  width: 50%;
-  height: 500px;
   margin-bottom: 60px;
 }
+
+.carousel-desktop {
+  /* left: 25%; */
+  width: 50%;
+}
+
+.carousel-mobile {
+  max-width: 100%;
+}
+
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
   z-index: 1;
@@ -23,14 +38,12 @@ body {
 
 /* Declare heights because of positioning of img element */
 .carousel .item {
-  height: 500px;
-  /* background-color: #777; */
+  /* height: 90%; */
 }
 .carousel-inner > .item > img {
-  position: absolute;
-  top: 0;
-  width: 100%;
-  height: 500px;
+  /* position: absolute; */
+  /* top: 0; */
+  /* width: 100%; */
 }
 
 /* RESPONSIVE CSS
@@ -39,7 +52,7 @@ body {
 @media {
   /* Bump up size of carousel content */
   .carousel-caption p {
-    margin-bottom: 10px;
+    margin-bottom: 0px;
     font-size: 25px;
     line-height: 1.4;
   }
